--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
     </section>
 
     <section id="skills">
-        <div class="container">
-            <h2>Skills</h2>
-            <div class="skills-icons">
-                <img src="D:\portfolio\icons\js.png" alt="JavaScript">
-                <img src="D:\portfolio\icons\html.png" alt="HTML">
-                <img src="D:\portfolio\icons\css.png" alt="CSS">
-                <img src="D:\portfolio\icons\nodejs.png" alt="Node.js">
-                <img src="D:\portfolio\icons\react.png" alt="React">
-                <img src="D:\portfolio\icons\postgre.png" alt="PostgreSQL">
-                <img src="D:\portfolio\icons\mysql.png" alt="MySQL">
-                <img src="D:\portfolio\icons\database-storage.png" alt="MongoDB">
-                <img src="D:\portfolio\icons\logo.png" alt="Visual Studio">
-            </div>
+    <div class="container">
+        <h2>Skills</h2>
+        <div class="skills-icons">
+            <img src="icons/js.png" alt="JavaScript">
+            <img src="icons/html.png" alt="HTML">
+            <img src="icons/css.png" alt="CSS">
+            <img src="icons/nodejs.png" alt="Node.js">
+            <img src="icons/react.png" alt="React">
+            <img src="icons/postgre.png" alt="PostgreSQL">
+            <img src="icons/mysql.png" alt="MySQL">
+            <img src="icons/database-storage.png" alt="MongoDB">
+            <img src="icons/logo.png" alt="Visual Studio">
         </div>
-    </section>
+    </div>
+</section>
 
     <section id="work">
         <div class="container">
