--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <p>Phone: +917013547891</p>
             <div class="social-icons">
                 <a href="https://vinodhiniyeleti.github.io/portfolio/" target="_blank">
-                    <img src="D:\portfolio\icons\ghub.png" alt="github">
+                    <img src="icons\ghub.png" alt="github">
                 </a>
                 <a href="https://www.instagram.com/vinodhini_yeleti?igsh=eXQwcHN3Znk2cjF2" target="_blank">
-                    <img src="D:\portfolio\icons\instagram.png" alt="Instagram">
+                    <img src="icons\instagram.png" alt="Instagram">
                 </a>
                 <a href="https://www.linkedin.com/in/vinodhini-yeleti-0650452a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
-                    <img src="D:\portfolio\icons\linkedin.png" alt="LinkedIn">
+                    <img src="icons\linkedin.png" alt="LinkedIn">
                 </a>
             </div>
         </div>
