--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="home-content">
             <h1>Vinodhini Yeleti</h1>
             <p>Software Developer</p>
-            <a href="D:\Vinodhini_Yeleti_Resume.pdf" download class="btn">Resume</a>
+            <a href="Vinodhini_Yeleti_Resume.pdf" download class="btn">Resume</a>
         </div>
     </section>
 
